Update tools test task and preserve config preprocessors
Ensure config blocks emit preprocessor lines and keep range for loops
tokenized when keyword spacing is disabled. Also align test-tools task
with the default go test invocation used elsewhere.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,7 +15,7 @@ tasks:
   test-tools:
     desc: Run tests against bpftrace/tools
     cmds:
-      - BPFTRACE_TOOLS_DIR=bpftrace/tools go test ./...
+      - go test ./...
 
   build:
     desc: Build the btfmt binary
