feat(lsp): add LSP server support
- add btfmt lsp subcommand and server wiring

- implement LSP handlers for formatting, hover, symbols, diagnostics

- resolve and merge per-document config settings

- add LSP smoke test task and README docs

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -26,3 +26,10 @@ tasks:
     desc: Format Go code
     cmds:
       - go fmt ./...
+
+  lsp-smoke:
+    desc: Smoke test for btfmt LSP (stdio)
+    deps:
+      - build
+    cmds:
+      - python3 scripts/lsp_smoke.py
