Add gh-review command

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -150,3 +150,9 @@ tasks:
     cmds:
       - task: build
       - task: test
+
+  gh-review:
+    desc: Notify bot to review on the current PR
+      cmds:
+        - gh pr comment --body "@codex review"
+        - gh pr comment --body "@gemini-code-assist review"
